# zamp

./: Makefile  README.md  interp  run.sh  xmlinterp4config
config/: config.xml
dox/: Doxyfile
inc/: Configuration.hpp  GeomObject.hpp  GuardedSocket.hpp  Handlers.hpp  Interp4Command.hpp  LibInterface.hpp  Makefile.am  MobileObj.hpp  ObjData.hpp  ProgramInterpreter.hpp  Scene.hpp  Sender.hpp  Set4LibInterfaces.hpp  Vector3D.hpp  geomVector.hh  headers.txt  xmlinterp.hpp
plugin/: Makefile  Makefile.am
plugin/inc/: Interp4Move.hh  Interp4Move.hpp  Interp4Pause.hpp  Interp4Rotate.hpp  Interp4Set.hpp
plugin/src/: Interp4Move.cpp  Interp4Pause.cpp  Interp4Rotate.cpp  Interp4Set.cpp
server/: Makefile  Makefile.app
src/: Handlers.cpp  LibInterface.cpp  ProgramInterpreter.cpp  Scene.cpp  Sender.cpp  Set4LibInterfaces.cpp  main.cpp  xmlinterp.cpp
