noinst_HEADERS= Configuration.hpp \
                GeomObject.hpp \
                GuardedSocket.hpp \
                Handlers.hpp \
                Interp4Command.hpp \
                LibInterface.hpp \
                MobileObj.hpp \
                ObjData.hpp \
                ProgramInterpreter.hpp \
                Scene.hpp \
                Sender.hpp \
                Set4LibInterfaces.hpp \
                Vector3D.hpp \
                xmlinterp.hpp