lib_LTLIBRARIES = libInterp4Move.la libInterp4Rotate.la

libtool1_la_SOURCES = src/Interp4Move.cpp
libtool1_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
libtool1_la_LDFLAGS = -module -version-info 1:0:0

libtool2_la_SOURCES = src/Interp4Rotate.cpp
libtool2_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
libtool2_la_LDFLAGS = -module -version-info 1:0:0
